# pystyle

./: .fixit.config.yaml  README.md  pyproject.toml  setup.cfg
lint/rules/: __init__.py  replace_class_method_return_type_to_self.py  replace_enum_to_str_enum_if_possible.py  replace_starred_dict_with_pipe.py  replace_union_with_pipe.py
lint/shared/: helpers.py
tests/: __init__.py
